green/templates/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green-website
  labels:
    app: green-website
    color: green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: green-website
      color: green
  template:
    metadata:
      labels:
        app: green-website
        color: green
    spec:
      containers:
        - name: green
          image: "lukaosmani/website-green:v1.0.0"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
