green/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: green-website
  labels:
    app: green-website
    color: green
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: green-website
    color: green
